--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 plugins {
   id 'application'
+  id 'org.springframework.boot' version '3.5.4'
 }
 repositories {
     mavenCentral()
 }
 dependencies {
+  implementation 'net.java.dev.jna:jna:5.17.0'
+  implementation 'net.java.dev.jna:jna-platform:5.17.0'
 }
 
 application {
-  mainClass = 'app.Main'
+  mainClass = 'App.Main'
 }
 
 sourceSets {
@@ -19,5 +22,5 @@ sourceSets {
     resources {
       srcDirs = ['src/resources']
     }
-  }
+ }
 }
