--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
+
 plugins {
   id 'application'
   id 'org.springframework.boot' version '3.5.4'
 }
+
+version = '0.0.1'
+
 repositories {
     mavenCentral()
 }
@@ -23,3 +27,6 @@ sourceSets {
     }
   }
 }
+
+
+
